added ResetWorld
